@@ -28,9 +28,9 @@ zip_safe = True
 include_package_data = True
 python_requires = >=3.6
 install_requires =
-    setuptools
     packaging
     importlib-metadata; python_version < '3.8'
+    importlib-resources; python_version < '3.7'
 setup_requires = setuptools; setuptools_scm
 test_suite = pint.testsuite.testsuite
 scripts = pint/pint-convert
